outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-3957527961831414888_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance with adaptive weights, while adding a novelty factor based on the node's historical selection frequency and a path diversity bonus to encourage exploring less traversed routes.}
                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance with adaptive weights, while adding a novelty factor based on the node's historical selection frequency and a path diversity bonus to encourage exploring less traversed routes.}
                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
